Squash all Cleanups and Fixes into one Signed-off-by: Felix Engl <felix.engl@hotmail.com>