@@ -16,10 +16,10 @@ package com.digitalpebble.stormcrawler.protocol;
 
 import com.digitalpebble.stormcrawler.Metadata;
 import crawlercommons.robots.BaseRobotRules;
-import java.util.Collection;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
+
+import java.lang.reflect.InvocationTargetException;
+import java.util.*;
+
 import org.apache.storm.Config;
 import org.slf4j.LoggerFactory;
 
@@ -76,16 +76,17 @@ public class DelegatorProtocol implements Protocol {
 
         public FilteredProtocol(String protocolimplementation, Object f, Config config) {
             // load the protocol
-            Class protocolClass;
+            Class<?> clazz;
             try {
-                protocolClass = Class.forName(protocolimplementation);
-                boolean interfaceOK = Protocol.class.isAssignableFrom(protocolClass);
+                clazz = Class.forName(protocolimplementation);
+                boolean interfaceOK = Protocol.class.isAssignableFrom(clazz);
                 if (!interfaceOK) {
                     throw new RuntimeException(
                             "Class " + protocolimplementation + " does not implement Protocol");
                 }
-                this.protoInstance = (Protocol) protocolClass.newInstance();
-                this.protoInstance.configure(config);
+                Class<? extends Protocol> protocolClass = (Class<? extends Protocol>) clazz;
+                protoInstance = protocolClass.getDeclaredConstructor().newInstance();
+                protoInstance.configure(config);
             } catch (ClassNotFoundException e) {
                 throw new RuntimeException("Can't load class " + protocolimplementation);
             } catch (InstantiationException e) {
@@ -93,6 +94,10 @@ public class DelegatorProtocol implements Protocol {
             } catch (IllegalAccessException e) {
                 throw new RuntimeException(
                         "IllegalAccessException for class " + protocolimplementation);
+            } catch (InvocationTargetException e) {
+                throw new RuntimeException("The underlying constructor threw an exception", e);
+            } catch (NoSuchMethodException e) {
+                throw new RuntimeException("Empty constructor for class "+protocolimplementation + " missing", e);
             }
 
             // instantiate filters
@@ -173,6 +178,10 @@ public class DelegatorProtocol implements Protocol {
         } else { // single value?
             throw new RuntimeException(
                     "DelegatorProtocol declared but single object found in config " + obj);
+        }
+
+        if (protocols.isEmpty()){
+            throw new RuntimeException("No sub protocols for delegation protocol defined.");
         }
 
         // check that the last protocol has no filter
